Bug Fix: Buttons at end of quix too close together on mobile, removed padding to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -562,3 +562,7 @@ a {
  display: none;
 }
 }
+
+.btn {
+  padding: 0;
+}
